# Firewall-Configuration-and-Basic-Intrusion-Detection-System

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PROJECT.md  README.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  STATE.md  config.yaml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-security-stability/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md
.planning/phases/02-architecture/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md
.planning/phases/1-foundation/: README.md
.planning/phases/2-firewall-core/: README.md
.planning/phases/3-ids-engine/: README.md
.planning/phases/4-gui/: README.md
.planning/phases/5-notifications-scheduler/: README.md
.planning/phases/6-api-exports/: README.md
.planning/phases/7-testing-polish/: README.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
api/: __init__.py  schemas.py  server.py
benchmarks/: benchmark_suite.py
benchmarks/results/: benchmark_2026-03-11T18-44-10.json  benchmark_2026-03-11T18-48-35.json  benchmark_2026-03-11T18-55-06.json  benchmark_2026-03-11T18-57-06.json
cli/: __init__.py  __main__.py  main.py
core/: __init__.py  advanced_features.py  alert_manager.py  anomaly.py  app_runner.py  blocklist.py  db_migrations.py  detector_abc.py  detector_registry.py  dpi_plugin.py  engine.py  event_bus.py  firewall.py  firewall_abc.py  firewall_linux.py  firewall_windows.py  geo.py  ids.py  interfaces.py  ml_detector.py  models.py  notifier.py  repository.py  rule_engine.py  scheduler.py  whitelist.py
docs/: contributing.md  index.md  security-audit.md
docs/deployment/: docker.md
docs/getting-started/: installation.md
docs/user-guide/: cli.md
packaging/linux/: build_deb.sh  netguard-ids.spec
packaging/linux/debian/: control
packaging/windows/: build_installer.ps1  netguard.wxs
rules/: builtin.yaml
tests/: conftest.py  test_advanced_features.py  test_alert_manager.py  test_api.py  test_blocklist.py  test_cli.py  test_coverage_gaps.py  test_detector_abc.py  test_engine.py  test_event_bus.py  test_firewall.py  test_firewall_abc.py  test_frontend_integration.py  test_ids.py  test_logger.py  test_migrations.py  test_ml_detector.py  test_models.py  test_repository.py  test_rule_engine.py  test_shutdown.py  test_validators.py
ui/: __init__.py  alerts_tab.py  blocklist_tab.py  dashboard_tab.py  event_bus_bridge.py  flow_visualization_tab.py  main_window.py  plugin_manager_tab.py  rule_editor_tab.py  rules_tab.py  scheduler_tab.py  settings_tab.py  theme.py  threat_map_tab.py  tray.py
utils/: __init__.py  config_loader.py  exporter.py  logger.py  validators.py
